--- a/public/index.html
+++ b/public/index.html
@@ -1,20 +1,9 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <!-- <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico"> -->
-    <!--
-      Notice the use of %PUBLIC_URL% in the tag above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
-
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="ICON" href="./mountains.ico" type="image/ico" />
-    <meta property="og:image" content="http://elijah-williams.io/6f541e08332894063af755c4de536178.png" />
+    <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
     <meta property="og:url" content="http://elijah-williams.io" />
     <meta property="fb:app_id" content="301379413612180" />
     <meta property="og:title" content="Elijah Williams - Front-end Developer" />
@@ -23,16 +12,6 @@
   </head>
   <body>
     <div class="application"></div>
-    <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
-
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
-
-      To begin the development, run `npm start`.
-      To create a production bundle, use `npm run build`.
-    -->
     <script type="text/javascript" src="bundle.js"></script>
   </body>
 </html>
